# Visual-servo-IHUVS

./: CMakeLists.txt  README.md  firstprocessor.cpp  firstprocessor.h  main.cpp  main_pos.cpp  main_rotation.cpp  main_test.cpp  robot.cpp  robot.h  secondprocessor.cpp  secondprocessor.h  thirdprocessor.cpp  thirdprocessor.h
Visual-servo/: CMakeLists.txt  package.xml
Visual-servo/data/: data.txt  error.txt  f_error.txt  frame.txt
Visual-servo/include/: controller.h  position_controller.h
Visual-servo/src/: creatboard.cpp  drawg.cpp  kalman_6dof.cpp  main.cpp  setgoal.cpp
Visual-servo/src/lib/: controller.cpp  image_processor.cpp  rotation_controller.cpp
controller/: controller.cpp  controller.h
findchessboard/: ChessboradStruct.cpp  firstprocessor.cpp  firstprocessor.h  robot.cpp  robot.h  secondprocessor.cpp  thirdprocessor.cpp
include/: controller.h  image_processor.h  rotation_controller.h
position_controller/: position_controller.cpp  position_controller.h
robot/: robot.cpp  robot.h
rotation_controller/: firstprocessor.cpp  secondprocessor.cpp  secondprocessor.h  thirdprocessor.cpp  thirdprocessor.h
src/: controller.cpp  image_processor.cpp  position_controller.cpp  robot.cpp
ur_chessboard/ur10_moveit_config/: .setup_assistant
visual_servo_kalman/: CMakeLists.txt
visual_servo_kalman/data/: data.txt
visual_servo_kalman/goal/: frame.txt
visual_servo_kalman/src/: kalman_6dof.cpp
